asae-explore.css
/* ... */
#asae-eb-right-user {
    padding: 0.5em 0.4em;
    cursor: pointer;
}
#asae-eb-right-user.active {
    background-color: #eeeeee;
}
#asae-eb-user {
    width: 2.2em;
    height: 2.2em;
}
.asae-eb-user-icon {
    color: #fff;
}
.asae-eb-user-icon.active {
    color: #000;
}
#asae-eb-modals {
    background-color: #333;
    width: 100%;
}
.asae-eb-modal-shadow {
    width: 100%;
    height: 4px;
    margin: 0;
    background-color: #bd491e;
    position: relative;
}
/* NAV */
#asae-eb-modal-nav-container {
    visibility: hidden;
    max-width: 1200px;
    margin: auto;
    height: auto;
    max-height: 0px;
    overflow: hidden;
    transition: max-height 0.3s ease-in, visibility 0s 0.3s;
}
#asae-eb-modal-nav-container.active {
    visibility: visible;
    max-height: 55em;
    transition: max-height 0.4s ease-out, visibility 0s 0s;
}
#asae-eb-modal-nav {
    max-width: 1200px;
    float: left;
    display: flex;
    flex-flow: wrap;
    background-color: #eee;
    color: #000;
    text-align: left;
}
#asae-eb-showdesc {
    width: 100%;
    padding: 1em 1.25em 1em 1.25em;
    font-size: 0.75em;
    font-weight: 200;
    text-align: right;
    vertical-align: middle;
}
#asae-eb-showdesc a:link {
    border-bottom: 0px solid;
    color: #333;
}
#asae-eb-showdesc-toggle {
    margin: 0 0.75em;
}
#asae-eb-showdesc-toggle:before {
    content: 'Show Descriptions';
}
#asae-eb-showdesc-toggle.active:before {
    content: 'Hide Descriptions';
}
.asae-eb-link {
    display: flex;
    flex-flow: wrap;
    width: 100%;
    padding: 0.75em;
    border-top: 2px dotted #fff;
}
.asae-eb-link-name {
    width: 100%;
}
.asae-eb-link-name a:link {
    text-decoration: none;
    color: #000;
    border-bottom: 1px solid;
    border-color: #bd491e;
    font-size: 1em;
    line-height: 1.25em;
    font-weight: 600;
}
.asae-eb-link-desc {
    visibility: hidden;
    font-size: 0.75em;
    line-height: 2em;
    font-weight: 300;
    width: 100%;
    height: auto;
    max-height: 0px;
    overflow: hidden;
    transition: max-height 0.2s ease-in, visibility 0s 0.2s;
}
.asae-eb-link-desc.active {
    visibility: visible;
    max-height: 3em;
    transition: max-height 0.3s ease-out, visibility 0s 0s;
}

.asae-eb-reg-button {
    background-color: #bd491e !important;
    text-align: center;
    text-decoration: none !important;
    display: inline-block;
    font-size: 0.85em !important;
    text-transform: uppercase;
    line-height: 1.5em;
    color: #fff !important;
    font-weight: 600 !important;
    padding: 0.2em 1em 0.2em 1em;
}
.asae-eb-reg-button:hover {
    background-color: #fff !important;
    color: #bd491e !important;
    text-decoration: none !important;
}

#asae-eb-join-button {
    background-color: #bd491e;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 1em;
    text-transform: uppercase;
    line-height: 1.5em;
    color: #fff;
    font-weight: 700;
    padding: 0.2em 1em 0.2em 1em;
}
#asae-eb-join-button:hover {
    background-color: #fff;
    color: #bd491e;
}
a#asae-eb-join-button:visited {
    color: #fff;
}
a#asae-eb-join-button:hover {
    color: #bd491e;
}
.asae-eb-showdesc-switch {
    position: relative;
    display: inline-block;
    width: 2.2em;
    height: 1.2em;
    background-color: #333;
    border-radius: 0.6em;
    margin: 0;
    vertical-align: middle;
}
.asae-eb-showdesc-input {
    opacity: 0;
    width: 0;
    height: 0;
}
.asae-eb-showdesc-slider {
    position: absolute;
    cursor: pointer;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: #ccc;
    -webkit-transition: .4s;
    transition: .4s;
}
.asae-eb-showdesc-slider:before {
    position: absolute;
    content: "";
    height: 1em;
    width: 1em;
    left: 0.1em;
    bottom: 0.1em;
    background-color: white;
    -webkit-transition: .25s;
    transition: .25s;
}
.asae-eb-showdesc-input:checked + .asae-eb-showdesc-slider {
    background: none;
    background-color: #bd491e;
    width: 2.2em;
    height: 1.2em;
    border-radius: 0.6em;
}
.asae-eb-showdesc-input:focus + .asae-eb-showdesc-slider {
    box-shadow: 0 0 1px #bd491e;
    background-image: none;
}
.asae-eb-showdesc-input:checked + .asae-eb-showdesc-slider:before {
    -webkit-transform: translateX(1em);
    -ms-transform: translateX(1em);
    transform: translateX(1em);
}
.asae-eb-showdesc-slider.round {
    border-radius: 1em;
    background: none;
    width: auto;
    height: auto;
    display: inline-block;
    margin: 0;
}
.asae-eb-showdesc-slider.round:before {
    border-radius: 50%;
}
/* SEARCH */
#asae-eb-modal-search-container {
    visibility: hidden;
    max-width: 1200px;
    margin: auto;
    height: auto;
    max-height: 0px;
    overflow: hidden;
    transition: max-height 0.3s ease-in, visibility 0s 0.3s;
}
#asae-eb-modal-search-container.active {
    visibility: visible;
    max-height: 6em;
    overflow: visible;
    transition: max-height 0.3s ease-out, visibility 0s 0s;
}
#asae-eb-modal-search {
    max-width: 1200px;
    width: 100%;
    display: flex;
    flex-flow: wrap;
    background-color: #eee;
    color: #000;
    text-align: left;
    position: relative;
}
/* AddSearch within Explore Bar */
#asae-eb-modal-search #global-searchfield-container {
    width: 100%;
    padding: 1em;
}
#asae-eb-modal-search #global-searchfield-container .addsearch-searchfield {
    display: flex !important;
    flex-direction: row !important;
    align-items: stretch !important;
    width: 100%;
    margin: 0 !important;
    padding: 0 !important;
}
#asae-eb-modal-search #global-searchfield-container .search-field-wrapper {
    display: contents;
}
/* ... */

